--- a/test/OpenTelemetry.Exporter.Geneva.Tests/OpenTelemetry.Exporter.Geneva.Tests.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.Tests/OpenTelemetry.Exporter.Geneva.Tests.csproj
@@ -4,7 +4,7 @@
     <Description>Unit test project for Geneva Exporters for OpenTelemetry</Description>
     <IsPackable>false</IsPackable>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-    <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461;net462;net47;net471;net472;net48</TargetFrameworks>
+    <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462;net47;net471;net472;net48</TargetFrameworks>
     <NoWarn>$(NoWarn),SA1311,SA1312,SA1313,SA1123,SA1202</NoWarn>
   </PropertyGroup>
 
@@ -14,7 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="KaitaiStruct.Runtime.CSharp" Version="0.9.0" />
-    <!-- MessagePack 2.x doesn't support net452 and net46 so we have to stick with MessagePack 1.x -->
+    <!-- MessagePack 2.x doesn't support net462 so we have to stick with MessagePack 1.x -->
     <PackageReference Include="MessagePack" Version="1.9.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <!--KaitaiStruct.Runtime.CSharp which is used to deserialize metrics data is not a strong-named assembly.
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc2" />
+    <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc5" />
   </ItemGroup>
 
   <ItemGroup>
