--- a/src/OpenTelemetry.Instrumentation.Runtime/OpenTelemetry.Instrumentation.Runtime.csproj
+++ b/src/OpenTelemetry.Instrumentation.Runtime/OpenTelemetry.Instrumentation.Runtime.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net461;netcoreapp3.1;net6.0</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net462;netcoreapp3.1;net6.0</TargetFrameworks>
         <Description>dotnet runtime instrumentation for OpenTelemetry .NET</Description>
         <PackageTags>$(PackageTags);runtime</PackageTags>
         <MinVerTagPrefix>Instrumentation.Runtime-</MinVerTagPrefix>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="OpenTelemetry.Api" Version="1.2.0-rc2" />
+        <PackageReference Include="OpenTelemetry.Api" Version="1.2.0" />
     </ItemGroup>
 
     <ItemGroup>
