--- a/test/OpenTelemetry.Exporter.Geneva.Benchmark/OpenTelemetry.Exporter.Geneva.Benchmark.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.Benchmark/OpenTelemetry.Exporter.Geneva.Benchmark.csproj
@@ -3,13 +3,13 @@
     <PropertyGroup>
 		<OutputType>Exe</OutputType>
         <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-        <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461;net462;net47;net471;net472;net48</TargetFrameworks>
+        <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462;net47;net471;net472;net48</TargetFrameworks>
         <NoWarn>$(NoWarn),SA1201,SA1202,SA1204,SA1311,SA1123</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
-		<PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc2" />
+		<PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc5" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="[5.0.0,)" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="5.0.4" />
 	</ItemGroup>
