--- a/test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests.csproj
@@ -30,6 +30,10 @@
     <Compile Remove="Resources\TestAWSEKSResourceDetector.cs" />
     <Compile Remove="Resources\TestAWSLambdaResourceDetector.cs" />
     <Compile Remove="Resources\TestResourceBuilderExtensions.cs" />
+    <Compile Remove="Resources\Http\CertificateUtil.cs" />
+    <Compile Remove="Resources\Http\TestHandler.cs" />
+    <Compile Remove="Resources\Http\TestServerCertificateValidationProvider.cs" />
+
   </ItemGroup>
 
   <ItemGroup>
