enable public api check

--- a/src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/OpenTelemetry.Extensions.PersistentStorage.Abstractions.csproj
+++ b/src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/OpenTelemetry.Extensions.PersistentStorage.Abstractions.csproj
@@ -8,6 +8,9 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn),1591</NoWarn>
+    <Nullable>enable</Nullable>
+    <EnableAnalysis>true</EnableAnalysis>
+    <EnablePublicApi>true</EnablePublicApi>
   </PropertyGroup>
 
 </Project>
