--- a/test/OpenTelemetry.Instrumentation.MassTransit.Tests/OpenTelemetry.Instrumentation.MassTransit.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.MassTransit.Tests/OpenTelemetry.Instrumentation.MassTransit.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Unit test project for OpenTelemetry MassTransit instrumentation</Description>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461</TargetFrameworks>
     <IncludeSharedTestSource>true</IncludeSharedTestSource>
   </PropertyGroup>
