--- a/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
     <Description>OpenTelemetry extensions for AWS X-Ray.</Description>
@@ -15,6 +15,8 @@
     <Compile Remove="Resources\AWSECSResourceDetector.cs" />
     <Compile Remove="Resources\AWSEKSResourceDetector.cs" />
     <Compile Remove="Resources\AWSLambdaResourceDetector.cs" />
+    <Compile Remove="Resources\Http\Handler.cs" />
+    <Compile Remove="Resources\Http\ServerCertificateValidationProvider.cs" />
   </ItemGroup>
 
   <ItemGroup>
