add release workflow

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -16,6 +16,8 @@ components:
     - SergeyKanzhelev
   src/OpenTelemetry.Extensions/:
     - codeblanch
+  src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
+    - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
     - vishweshbankwar
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
