--- a/test/OpenTelemetry.Contrib.Tests.Shared/OpenTelemetry.Contrib.Tests.Shared.csproj
+++ b/test/OpenTelemetry.Contrib.Tests.Shared/OpenTelemetry.Contrib.Tests.Shared.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="1.2.0" />
+    <PackageReference Include="xunit" Version="$(XUnitPkgVer)" />
   </ItemGroup>
 
 </Project>
