--- a/src/OpenTelemetry.Instrumentation.StackExchangeRedis/OpenTelemetry.Instrumentation.StackExchangeRedis.csproj
+++ b/src/OpenTelemetry.Instrumentation.StackExchangeRedis/OpenTelemetry.Instrumentation.StackExchangeRedis.csproj
@@ -5,7 +5,8 @@
     <Description>StackExchange.Redis instrumentation for OpenTelemetry .NET</Description>
     <PackageTags>$(PackageTags);distributed-tracing;Redis;StackExchange.Redis</PackageTags>
     <IncludeSharedInstrumentationSource>true</IncludeSharedInstrumentationSource>
-      <EnablePublicApi>true</EnablePublicApi>
+    <MinVerTagPrefix>Instrumentation.StackExchangeRedis-</MinVerTagPrefix>
+    <EnablePublicApi>true</EnablePublicApi>
   </PropertyGroup>
 
   <ItemGroup>
