--- a/examples/redis/Examples.StackExchangeRedis/Examples.StackExchangeRedis.csproj
+++ b/examples/redis/Examples.StackExchangeRedis/Examples.StackExchangeRedis.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\OpenTelemetry.Instrumentation.StackExchangeRedis\OpenTelemetry.Instrumentation.StackExchangeRedis.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Instrumentation.StackExchangeRedis\OpenTelemetry.Instrumentation.StackExchangeRedis.csproj" />
   </ItemGroup>
 
 </Project>
