Add AspNet.TelemetryHttpModule instrumentation

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -2,8 +2,6 @@
 
 # Each component identified by its path prefix has a list of users
 components:
-  src/OpenTelemetry.Extensions.Docker/:
-    - swetharavichandrancisco
   src/OpenTelemetry.Contrib.Extensions.AWSXRay/:
     - srprash
     - lupengamzn
@@ -20,10 +18,15 @@ components:
     - SergeyKanzhelev
   src/OpenTelemetry.Extensions/:
     - codeblanch
+  src/OpenTelemetry.Extensions.Docker/:
+    - swetharavichandrancisco
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
     - vishweshbankwar
+  src/OpenTelemetry.Instrumentation.AspNet.TelemetryHttpModule/:
+    - cijothomas
+    - utpilla
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
     - ejsmith
   src/OpenTelemetry.Instrumentation.GrpcCore/:
@@ -68,16 +71,19 @@ components:
     - reyang
     - utpilla
     - Yun-Ting
-  test/OpenTelemetry.Extensions.Docker.Tests/:
-    - swetharavichandrancisco
   test/OpenTelemetry.Exporter.Instana.Tests/:
     - zivaninstana
   test/OpenTelemetry.Exporter.Stackdriver.Tests/:
     - SergeyKanzhelev
   test/OpenTelemetry.Extensions.Tests/:
     - codeblanch
+  test/OpenTelemetry.Extensions.Docker.Tests/:
+    - swetharavichandrancisco
   test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
     - vishweshbankwar
+  test/OpenTelemetry.Instrumentation.AspNet.TelemetryHttpModule.Tests/:
+    - cijothomas
+    - utpilla
   test/OpenTelemetry.Instrumentation.ElasticsearchClient.Tests/:
     - ejsmith
   test/OpenTelemetry.Instrumentation.GrpcCore.Tests/:
