--- a/.github/workflows/package-Extensions.PersistentStorage.Abstractions.yml
+++ b/.github/workflows/package-Extensions.PersistentStorage.Abstractions.yml
@@ -27,13 +27,10 @@ jobs:
         fetch-depth: 0 # fetching all
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore src/${{env.PROJECT}}
 
     - name: dotnet build ${{env.PROJECT}}
       run: dotnet build src/${{env.PROJECT}} --configuration Release --no-restore -p:Deterministic=true
-
-    - name: dotnet test ${{env.PROJECT}}
-      run: dotnet test test/${{env.PROJECT}}.Tests
 
     - name: dotnet pack ${{env.PROJECT}}
       run: dotnet pack src/${{env.PROJECT}} --configuration Release --no-build
