--- a/src/OpenTelemetry.Instrumentation.EventCounters/OpenTelemetry.Instrumentation.EventCounters.csproj
+++ b/src/OpenTelemetry.Instrumentation.EventCounters/OpenTelemetry.Instrumentation.EventCounters.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Description>OpenTelemetry Metrics instrumentation for Dotnet EventCounters</Description>
@@ -8,7 +7,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="OpenTelemetry.Api" Version="1.2.0-rc2" />
+        <PackageReference Include="OpenTelemetry.Api" Version="1.3.0" />
     </ItemGroup>
 
     <ItemGroup>
