--- a/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="Moq" Version="$(MoqPkgVer)" />
         <PackageReference Include="coverlet.collector" Version="$(CoverletCollectorPkgVer)" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
         <PackageReference Include="xunit" Version="$(XUnitPkgVer)" />
