Changed owner for OpenTelemetry.Extensions.Docker
Original developer is no longer maintain it

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -21,7 +21,7 @@ components:
   src/OpenTelemetry.Extensions/:
     - codeblanch
   src/OpenTelemetry.Extensions.Docker/:
-    - swetharavichandrancisco
+    - iskiselev
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
