Update component owners file

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -1,6 +1,7 @@
 # This file is used by .github/workflows/assign-reviewers.yml
 
 # Each component identified by its path prefix has a list of users
+# Please add the entries in alphabetically sorted order
 components:
   src/OpenTelemetry.Contrib.Extensions.AWSXRay/:
     - srprash
@@ -31,6 +32,8 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
     - ejsmith
+  src/OpenTelemetry.Instrumentation.EventCounters/:
+    - hananiel
   src/OpenTelemetry.Instrumentation.GrpcCore/:
     - pcwiese
   src/OpenTelemetry.Instrumentation.Hangfire/:
@@ -48,8 +51,6 @@ components:
     - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
-  src/OpenTelemetry.Instrumentation.EventCounters/:
-    - hananiel
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
     - srprash
     - lupengamzn
@@ -91,6 +92,8 @@ components:
     - vishweshbankwar
   test/OpenTelemetry.Instrumentation.ElasticsearchClient.Tests/:
     - ejsmith
+  test/OpenTelemetry.Instrumentation.EventCounters.Tests/:
+    - hananiel
   test/OpenTelemetry.Instrumentation.GrpcCore.Tests/:
     - pcwiese
   test/OpenTelemetry.Instrumentation.Hangfire.Tests/:
@@ -108,5 +111,3 @@ components:
     - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
-  test/OpenTelemetry.Instrumentation.EventCounters.Tests/:
-    - hananiel
