--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -44,6 +44,8 @@ components:
     - moonheart
   src/OpenTelemetry.Instrumentation.Owin/:
     - codeblanch
+  src/OpenTelemetry.Instrumentation.Process/:
+    - Yun-Ting
   src/OpenTelemetry.Instrumentation.Quartz/:
     - maldago
   src/OpenTelemetry.Instrumentation.Runtime/:
