--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -8,9 +8,6 @@ components:
     - lupengamzn
   src/OpenTelemetry.Contrib.Instrumentation.AWS/:
     - srprash
-  src/OpenTelemetry.Contrib.Instrumentation.AWSLambda/:
-    - rypdal
-    - Oberon00
   src/OpenTelemetry.Exporter.Geneva/:
     - cijothomas
     - codeblanch
@@ -30,6 +27,9 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
     - vishweshbankwar
+  src/OpenTelemetry.Instrumentation.AWSLambda/:
+    - rypdal
+    - Oberon00
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
     - ejsmith
   src/OpenTelemetry.Instrumentation.EventCounters/:
@@ -58,9 +58,6 @@ components:
     - lupengamzn
   test/OpenTelemetry.Contrib.Instrumentation.AWS.Tests/:
     - srprash
-  test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/:
-    - rypdal
-    - Oberon00
   test/OpenTelemetry.Exporter.Geneva.Benchmark/:
     - cijothomas
     - codeblanch
@@ -92,6 +89,9 @@ components:
     - swetharavichandrancisco
   test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
     - vishweshbankwar
+  test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
+    - rypdal
+    - Oberon00
   test/OpenTelemetry.Instrumentation.ElasticsearchClient.Tests/:
     - ejsmith
   test/OpenTelemetry.Instrumentation.EventCounters.Tests/:
