[Instrumentation.MassTransit] PublicApi verification

--- a/src/OpenTelemetry.Instrumentation.MassTransit/OpenTelemetry.Instrumentation.MassTransit.csproj
+++ b/src/OpenTelemetry.Instrumentation.MassTransit/OpenTelemetry.Instrumentation.MassTransit.csproj
@@ -5,6 +5,7 @@
     <PackageTags>$(PackageTags);distributed-tracing;MassTransit</PackageTags>
     <MinVerTagPrefix>Instrumentation.MassTransit-</MinVerTagPrefix>
     <IncludeSharedInstrumentationSource>true</IncludeSharedInstrumentationSource>
+    <EnablePublicApi>true</EnablePublicApi>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryPkgVer)" />
