--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -2,12 +2,12 @@ name: dotnet format
 
 on:
   push:
-    branches: [ 'main*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
     paths:
     - '**.cs'
     - '.editorconfig'
   pull_request:
-    branches: [ 'main*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
     paths:
     - '**.cs'
     - '.editorconfig'
