[repo] Run workflows for any branch starting with "main" (#808)

--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -2,9 +2,9 @@ name: sanitycheck
 
 on:
   push:
-    branches: [ main ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
 
 jobs:
   misspell:
