--- a/.github/workflows/ci-md.yml
+++ b/.github/workflows/ci-md.yml
@@ -9,7 +9,7 @@ name: Build
 
 on:
   pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
     paths:
     - '**.md'
 
