--- a/.github/workflows/dotnet-format-md.yml
+++ b/.github/workflows/dotnet-format-md.yml
@@ -9,7 +9,7 @@ name: dotnet format
 
 on:
   pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
     paths-ignore:
     - '**.cs'
     - '.editorconfig'
