--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -2,11 +2,11 @@ name: markdownlint
 
 on:
   push:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
     paths:
     - '**.md'
   pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extension*' ]
+    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
     paths:
     - '**.md'
 
